# minesweeper

./: CMakeLists.txt  LICENSE  Makefile  README.md  main
assets/: bomb.wav:Zone.Identifier  flag.png:Zone.Identifier
lib/: game.h
src/: game.cpp  gui.cpp  main.cpp  tile.cpp
